--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "chai": "^4.1.2",
     "codecov": "^3.0.4",
     "eslint": "^5.5.0",
+    "glob": "^7.1.3",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
     "proxyquire": "^2.1.0",
