--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "glob": "^7.1.6",
     "mocha": "^6.2.2",
     "nyc": "^14.0.0",
+    "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
