chore(package): allow improvement type of commits

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nohook": true,
     "style": "angular",
     "types": [
-      "feat",
+	  "feat",
+	  "improvement",
       "fix",
       "docs",
       "style",
