--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "nohook": true,
     "style": "angular",
     "types": [
-	  "feat",
-	  "improvement",
+      "feat",
+      "improvement",
       "fix",
       "docs",
       "style",
@@ -76,6 +76,7 @@
     "@babel/register": "^7.7.4",
     "@comandeer/eslint-config": "^0.2.2",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.1",
     "eslint": "^6.7.1",
     "glob": "^7.1.6",
