--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "codecov": "^3.6.1",
     "eslint": "^6.8.0",
     "glob": "^7.1.6",
+    "istanbul-lib-instrument": "^4.0.0",
     "mocha": "^6.2.2",
     "nyc": "^15.0.0",
     "pirates": "^4.0.1",
