--- a/package.json
+++ b/package.json
@@ -80,7 +80,10 @@
     "codecov": "^3.6.1",
     "eslint": "^6.8.0",
     "glob": "^7.1.6",
+    "istanbul-lib-coverage": "^3.0.0",
     "istanbul-lib-instrument": "^4.0.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.0.0",
     "mocha": "^6.2.2",
     "nyc": "^15.0.0",
     "pirates": "^4.0.1",
@@ -93,6 +96,7 @@
     "@comandeer/rollup-lib-bundler": "^0.9.0",
     "commitplease": "^3.2.0",
     "cz-conventional-changelog": "^3.0.2",
-    "husky": "^3.1.0"
+    "husky": "^3.1.0",
+    "rimraf": "^3.0.0"
   }
 }
