--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@comandeer/eslint-config": "^0.2.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chalk": "^3.0.0",
     "codecov": "^3.6.2",
     "eslint": "^6.8.0",
     "glob": "^7.1.6",
