--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "dist"
   ],
   "scripts": {
-    "lint": "eslint \"src/**/*.js\" \"bin/**/*\" \"tests/*.js\" \"tests/helpers/**/*.js\"",
     "build": "rlb",
-    "pretest": "npm run lint && npm run build",
+    "pretest": "npm run build",
     "test": "node ./bin/mlt",
-    "pretest-legacy": "npm run pretest",
-    "test-legacy": "nyc mocha \"tests/**/*.js\" --exclude \"tests/{helpers,fixtures/**}/*.js\" --timeout 15000 --require @babel/register",
-    "version": "npm test && npm run build && git add -f dist/",
+	"version": "npm test && npm run build && git add -f dist/",
     "postversion": "git rm -r --cached dist/ && git commit -m \"chore(dist): clean after release [ci skip]\" && git push origin && git push origin --tags"
   },
   "config": {
