--- a/package.json
+++ b/package.json
@@ -93,11 +93,13 @@
     "sinon-chai": "^3.5.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.12.17",
     "@comandeer/is-ci": "^3.0.0",
     "@comandeer/rollup-lib-bundler": "^0.12.0",
     "commitplease": "^3.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.0.9",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "terser": "^5.6.0"
   }
 }
