build(package): add prebuild script
Always update Chai preamble before building.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "scripts": {
+    "prebuild": "node dev/prepareChaiPreamble",
     "build": "rlb",
     "pretest": "npm run build",
     "test": "node ./bin/mlt",
