--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "All testing utilities in one, small package",
   "main": "dist/mocha-lib-tester.js",
   "module": "dist/mocha-lib-tester.es2015.js",
+  "types": "./mlt.d.ts",
   "engines": {
     "node": ">=12.0.0"
   },
