--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "files": [
     "bin",
-    "dist"
+    "dist",
+	"mlt.d.ts"
   ],
   "scripts": {
     "prebuild": "node dev/prepareChaiPreamble",
