--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pretest": "npm run build",
     "test": "node ./bin/mlt",
     "version": "npm test && npm run build && git add -f dist/",
-    "postversion": "git rm -r --cached dist/ && git commit -m \"chore(dist): clean after release [ci skip]\" && git push origin && git push origin --tags"
+    "postversion": "git rm -r --cached dist/ && git commit -m \"chore(dist): clean after release [ci skip]\" && git push origin && git push origin --tags",
+    "prepare": "husky install"
   },
   "config": {
     "commitizen": {
@@ -72,38 +73,38 @@
   },
   "homepage": "https://github.com/Comandeer/mocha-lib-tester#readme",
   "dependencies": {
-    "@babel/core": "^7.12.17",
-    "@babel/preset-env": "^7.12.17",
-    "@babel/register": "^7.12.13",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
+    "@babel/register": "^7.13.16",
     "@comandeer/eslint-config": "^0.3.0",
-    "chai": "^4.3.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "codecov": "^3.8.1",
     "enumify": "^2.0.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.25.0",
     "glob": "^7.1.6",
     "is-ci": "^3.0.0",
     "istanbul-lib-coverage": "^3.0.0",
     "istanbul-lib-instrument": "^4.0.3",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.0.2",
-    "mocha": "^8.3.0",
+    "mocha": "^8.3.2",
     "npm-run-path": "^4.0.1",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
-    "sinon": "^9.2.4",
-    "sinon-chai": "^3.5.0"
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.12.17",
+    "@babel/types": "^7.14.0",
     "@comandeer/is-ci": "^3.0.0",
-    "@comandeer/rollup-lib-bundler": "^0.12.0",
+    "@comandeer/rollup-lib-bundler": "^0.13.0",
     "commitplease": "^3.2.0",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "rimraf": "^3.0.2",
-    "terser": "^5.6.0"
+    "terser": "^5.7.0"
   }
 }
