--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^10.0.0",
-    "sinon-chai": "^3.6.0"
+    "sinon-chai": "^3.6.0",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@babel/types": "^7.14.0",
