--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chalk": "^4.1.1",
+    "chokidar": "^3.5.1",
     "codecov": "^3.8.1",
     "enumify": "^2.0.0",
     "eslint": "^7.25.0",
