--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^6.0.0",
     "rimraf": "^3.0.2",
-    "terser": "^5.7.0"
+    "terser": "^5.7.0",
+    "touch": "^3.1.0"
   }
 }
