--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "commitplease": "^3.2.0",
     "cross-spawn": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
+    "fs-extra": "^8.1.0",
     "husky": "^6.0.0",
     "rimraf": "^3.0.2",
     "terser": "^5.7.0",
