--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "codecov": "^3.8.2",
     "enumify": "^2.0.0",
     "eslint": "^7.29.0",
+    "gauge": "^3.0.0",
     "glob": "^7.1.7",
     "is-ci": "^3.0.0",
     "istanbul-lib-coverage": "^3.0.0",
@@ -93,6 +94,7 @@
     "mocha": "^9.0.1",
     "npm-run-path": "^4.0.1",
     "nyc": "^15.1.0",
+    "object-assign": "^4.1.1",
     "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^11.1.1",
