--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/register": "^7.14.5",
+    "@comandeer/cli-spinner": "^0.1.0",
     "@comandeer/eslint-config": "^0.4.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -84,7 +85,6 @@
     "codecov": "^3.8.3",
     "enumify": "^2.0.0",
     "eslint": "^7.31.0",
-    "gauge": "^3.0.0",
     "glob": "^7.1.7",
     "is-ci": "^3.0.0",
     "istanbul-lib-coverage": "^3.0.0",
@@ -94,7 +94,6 @@
     "mocha": "^9.0.2",
     "npm-run-path": "^4.0.1",
     "nyc": "^15.1.0",
-    "object-assign": "^4.1.1",
     "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^11.1.1",
