--- a/package.json
+++ b/package.json
@@ -98,12 +98,14 @@
     "proxyquire": "^2.1.3",
     "sinon": "^11.1.1",
     "sinon-chai": "^3.7.0",
+    "threads": "^1.7.0",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@babel/types": "^7.14.8",
     "@comandeer/rollup-lib-bundler": "^0.14.0",
     "commitplease": "^3.2.0",
+    "cpy-cli": "^3.1.1",
     "cross-spawn": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "fs-extra": "^10.0.0",
