--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.0.5",
     "mocha": "^9.1.3",
-    "npm-run-path": "^5.0.1",
+    "npm-run-path": "4.0.1",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
     "proxyquire": "^2.1.3",
