--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,12 @@ on:
       - main
 
 jobs:
-  test-linux:
+  test:
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
-        node: [ '12', '14', '16' ]
+        node: [ '16', '18' ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
