--- a/package.json
+++ b/package.json
@@ -74,41 +74,41 @@
   },
   "homepage": "https://github.com/Comandeer/mocha-lib-tester#readme",
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/register": "^7.16.0",
-    "@comandeer/cli-spinner": "^0.3.0",
-    "@comandeer/eslint-config": "^0.4.0",
-    "chai": "^4.3.4",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/register": "^7.17.7",
+    "@comandeer/cli-spinner": "^0.3.2",
+    "@comandeer/eslint-config": "^0.8.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.2",
+    "chalk": "4.1.2",
+    "chokidar": "^3.5.3",
     "codecov": "^3.8.3",
     "enumify": "^2.0.0",
-    "eslint": "^8.2.0",
-    "glob": "^7.2.0",
+    "eslint": "^8.18.0",
+    "glob": "^8.0.3",
     "is-ci": "^3.0.1",
     "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-instrument": "^5.1.0",
+    "istanbul-lib-instrument": "^5.2.0",
     "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.0.5",
-    "mocha": "^9.1.3",
+    "istanbul-reports": "^3.1.4",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "pirates": "^4.0.1",
+    "pirates": "^4.0.5",
     "proxyquire": "^2.1.3",
-    "sinon": "^12.0.1",
+    "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "threads": "^1.7.0",
-    "yargs": "^17.2.1"
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@babel/types": "^7.16.0",
-    "@comandeer/rollup-lib-bundler": "^0.14.0",
+    "@babel/types": "^7.18.4",
+    "@comandeer/rollup-lib-bundler": "^0.16.0",
     "commitplease": "^3.2.0",
     "cross-spawn": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "fs-extra": "^10.0.0",
-    "husky": "^7.0.4",
-    "terser": "^5.10.0"
+    "fs-extra": "^10.1.0",
+    "husky": "^8.0.1",
+    "terser": "^5.14.1"
   }
 }
