--- a/package.json
+++ b/package.json
@@ -3,7 +3,24 @@
   "version": "0.6.0",
   "description": "All testing utilities in one, small package",
   "main": "dist/mocha-lib-tester.js",
-  "module": "dist/mocha-lib-tester.es2015.js",
+  "exports": {
+	".": {
+		"require": "./dist/mocha-lib-tester.js",
+		"import": "./dist/mocha-lib-tester.mjs"
+	},
+	"./workers/codecov": {
+		"require": "./dist/workers/codecov.js",
+		"import": "./dist/workers/codecov.mjs"
+	},
+	"./workers/linter": {
+		"require": "./dist/workers/linter.js",
+		"import": "./dist/workers/linter.mjs"
+	},
+	"./workers/tester": {
+		"require": "./dist/workers/tester.js",
+		"import": "./dist/workers/tester.mjs"
+	}
+  },
   "types": "./mlt.d.ts",
   "engines": {
     "node": ">=16.12.0"
@@ -19,7 +36,6 @@
   "scripts": {
     "prebuild": "node dev/prepareChaiPreamble",
     "build": "rlb",
-    "postbuild": "node dev/copyWorkers",
     "pretest": "npm run build",
     "test": "node ./bin/mlt",
     "version": "npm test && npm run build && git add -f dist/",
