test(mlt): add test for preserving dynamic import

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ npm-debug.log
 .fixtures-temp
 /codecov
 /codecov.exe
+!tests/__fixtures__/**/node_modules/
+tests/__fixtures__/**/node_modules/.cache/
